# Thrones

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  RULES.md  TODO.txt
android/app/: build.gradle  proguard-rules.pro
android/app/jni/: Application.mk  CMakeLists.txt
android/app/jni/src/: Android.mk  CMakeLists.txt  engine  oven  prog  utils
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/carnkaw/thrones/: Thrones.java
android/app/src/main/java/org/duravia/thrones/: Thrones.java
android/app/src/main/res/values/: strings.xml  styles.xml
doc/: docs.html  rules.html  style.css
lib/: COPYING.glm.txt
lib/msvc32/: SDL2.lib  SDL2_net.lib  SDL2_ttf.lib  glew32s.lib
lib/msvc64/: SDL2_net.lib  SDL2_ttf.lib  glew32s.lib
rsc/: Info.plist  debug_run.bat  debug_run.sh  resource.rc  server.rc  thrones-server.service  thrones.desktop  thrones.html  thrones.icns  thrones.rc
rsc/data/: Copyrights.Kurinto.txt  vr_actions.json  vr_bindings_generic.json  vr_bindings_vive.json
rsc/data/objects/: regular.mtl
rsc/materials/: misc.mtl  pieces.mtl  regular.mtl  tiles.mtl
rsc/shaders/: blur.frag  blurColor.frag  blurMono.frag  brights.frag  depth.frag  depth.geom  depth.vert  final.frag  frame.vert  gauss.frag  geom.frag  geom.vert  geometry.frag  geometry.vert  gui.frag  gui.vert  guiAddr.frag  guiAddr.vert  light.frag  light.vert  scene.frag  scene.vert  skybox.frag  skybox.vert  ssao.frag  ssr.frag  ssrColor.frag  startup.frag  startup.vert  vrController.frag  vrController.vert  vrGui.vert  vrModel.frag  vrModel.vert  vrWindow.frag  vrWindow.vert
src/engine/: audioSys.cpp  audioSys.h  fileSys.cpp  fileSys.h  inputSys.cpp  inputSys.h  scene.cpp  scene.h  shaders.cpp  shaders.h  vrSys.cpp  vrSys.h  windowSys.cpp  windowSys.h  world.cpp  world.h
src/oven/: oven.cpp  oven.h  ovenProg.cpp
src/prog/: board.cpp  board.h  game.cpp  game.h  guiGen.cpp  guiGen.h  netcp.cpp  netcp.h  program.cpp  program.h  progs.cpp  progs.h  recorder.cpp  recorder.h  types.cpp  types.h
src/server/: common.h  log.cpp  log.h  server.cpp  server.h  serverProg.cpp
src/test/: alias.cpp  aliasTest.cpp  fileSys.cpp  oven.cpp  server.cpp  serverTest.cpp  tests.cpp  tests.h  text.cpp  textTest.cpp  utils.cpp  utilsTest.cpp
src/utils/: alias.h  context.cpp  context.h  cvec2.h  layouts.cpp  layouts.h  objects.cpp  objects.h  settings.cpp  settings.h  text.cpp  text.h  utils.cpp  utils.h  widgets.cpp  widgets.h
tools/: export.py  incVersion.py  server.py  spacerm.py  version.py  wslim.py
